--- a/client/src/components/UpdateUserInfoForm/UpdateUserInfoForm.module.sass
+++ b/client/src/components/UpdateUserInfoForm/UpdateUserInfoForm.module.sass
@@ -27,6 +27,7 @@
       width: 120px
       height: 120px
       align-self: center
+      object-fit: cover
 
     .uploadInputContainer
       display: flex
