--- a/client/src/components/ContestBox/ContestBox.module.sass
+++ b/client/src/components/ContestBox/ContestBox.module.sass
@@ -5,6 +5,7 @@
   background-color: #f9fafb
   padding: 30px 20px 10px 20px
   margin-bottom: 15px
+  cursor: pointer
   @media(max-width: 400px)
     flex-direction: column
   .mainContestInfo
@@ -48,7 +49,7 @@
       span
         font-size: 14px
         color: #4e618d
-    .titleAndIdContainer
+    .contestHeaderContainer
       width: 100%
       display: flex
       justify-content: flex-start
@@ -60,7 +61,18 @@
         color: #556da5
         font-size: 18px
         font-weight: 500
-        margin-right: 20px
+        margin-right: 5px
+
+      .contestStatus
+        text-transform: capitalize
+        margin: 0 10px
+        color: #7c7c7c
+
+      .finishedContest
+        color: #b1b1b1
+      .activeContest
+        color: #455a89
+
   .entryAndTimeContainer
     display: flex
     padding: 10px
