--- a/client/src/components/LoginForm/LoginForm.module.sass
+++ b/client/src/components/LoginForm/LoginForm.module.sass
@@ -1,4 +1,5 @@
 .loginForm
+  position: relative
   width: 600px
   display: flex
   flex-direction: column
@@ -29,6 +30,7 @@
     color: white
 
   .inputContainer
+    position: relative
     display: flex
     flex-direction: column
     justify-content: center
@@ -37,21 +39,33 @@
     margin-left: 20px
 
     .fieldWarning
-      font-size: 15px
+      position: absolute
+      z-index: 100
+      bottom: -22px
+      font-size: 17px
       display: flex
       flex-direction: row
       justify-content: center
       align-items: center
       color: white
-      border: 1px solid #b72522
-      margin-bottom: 15px
-      padding-bottom: 5px
-      padding-top: 5px
+      background-color:  #b72522
+      padding: 5px
       text-align: center
+
+      &::before
+        content: ''
+        position: absolute
+        top: -10px
+        left: 20px
+        width: 0
+        height: 0
+        border-style: solid
+        border-width: 0 6px 10px 6px
+        border-color: transparent transparent #b72422 transparent
 
     .input
       background-color: white
-      border: none
+      border: 2px solid white
       border-radius: 4px
       color: #9ca8b7
       font-size: 18px
@@ -68,39 +82,6 @@
     .valid
       border: 2px solid green
 
-
-  .error
-    align-self: stretch
-    margin-right: 40px
-    margin-left: 40px
-    background: red
-    color: white
-    font-size: 17px
-    letter-spacing: 0.6px
-    border: 1px solid white
-    border-radius: 8px
-    text-align: center
-    padding-right: 30px
-    padding-left: 30px
-    padding-top: 20px
-    padding-bottom: 20px
-    margin-top: 15px
-    margin-bottom: 20px
-
-
-  .errorValid
-    font-size: 14px
-    text-align: center
-    border: 1px solid red
-    align-self: stretch
-    margin-left: 20px
-    margin-right: 20px
-    color: white
-    padding-top: 6px
-    padding-bottom: 6px
-    margin-top: 5px
-    margin-bottom: 15px
-
   h2
     text-align: center
     font-size: 34px
@@ -108,3 +89,7 @@
     color: white
     margin-top: 20px
     margin-bottom: 28px
+
+  .errorPosition
+    position: absolute
+    top: -35px
