Add cursor pointer to elements

--- a/client/src/components/Brief/Brief.module.sass
+++ b/client/src/components/Brief/Brief.module.sass
@@ -26,6 +26,7 @@
     padding: 12px 28px
     border-radius: 8px
     background-color: #8aca6b
+    cursor: pointer
 
     &:hover
       background-color: #6b8ab1
@@ -70,6 +71,7 @@
         padding: 12px 28px
         border-radius: 8px
         background-color: #8aca6b
+        cursor: pointer
 
         &:hover
           background-color: #6b8ab1
