--- a/client/src/components/BundleBox/BundleBox.module.sass
+++ b/client/src/components/BundleBox/BundleBox.module.sass
@@ -11,6 +11,7 @@
   flex: 1 1
   min-width: 170px
   max-width: 350px
+  cursor: pointer
 
   &:hover
     box-shadow: 2px 2px 2px 1px rgba(0,0,0,0.2)
