--- a/client/src/components/PayForm/PayForm.module.sass
+++ b/client/src/components/PayForm/PayForm.module.sass
@@ -50,6 +50,7 @@
       border-radius: 4px
       color: white
       margin-left: 10px
+      cursor: pointer
       @media(max-width: 480px)
         padding: 8px 30px
   .totalSum
