--- a/client/src/components/CreatorDashboard/CreatorDashboard.module.sass
+++ b/client/src/components/CreatorDashboard/CreatorDashboard.module.sass
@@ -70,13 +70,13 @@
         font-size: 20px
         box-sizing: border-box
         padding: 10px 0
+        cursor: pointer
         @media(max-width: 1000px)
           width: 100%
           text-align: center
           margin: 0 10px
       .activeMyEntries
         border-radius: 6px
-        padding: 10px 20px
         color: white
         background-color: #556da5
       .inputContainer
@@ -99,6 +99,8 @@
           box-shadow: inset 0 1px 1px rgba(0,0,0,.075)
           background-color: white
           transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s
+          cursor: pointer
+
         span
           margin-bottom: 5px
           font-weight: 700
