--- a/client/src/components/CustomerDashboard/CustomerDashboard.module.sass
+++ b/client/src/components/CustomerDashboard/CustomerDashboard.module.sass
@@ -52,6 +52,7 @@
       font-size: 18px
       border-radius: 10px
       padding: 10px
+      cursor: pointer
       @media(max-width: 1000px)
         height: 20px
         margin: 0 5px
