--- a/client/src/components/Header/Header.module.sass
+++ b/client/src/components/Header/Header.module.sass
@@ -31,6 +31,7 @@
       font-size: 14px
       font-weight: 400
       margin-bottom: 10px
+      cursor: pointer
 
       &:hover
         color: white
@@ -67,6 +68,7 @@
             justify-content: flex-start
             margin: 0 20px 0
             text-align: center
+            cursor: pointer
             @media(max-width: 700px)
               width: 100%
               padding: 0 15px
