Fix render images

--- a/client/src/components/Header/Header.module.sass
+++ b/client/src/components/Header/Header.module.sass
@@ -188,6 +188,7 @@
           width: 20px
           height: 20px
           border-radius: 10px
+          object-fit: cover
 
         span
           padding: 0
