--- a/client/src/components/OfferBox/OfferBox.module.sass
+++ b/client/src/components/OfferBox/OfferBox.module.sass
@@ -87,6 +87,8 @@
         margin-top: 10px
         max-width: 200px
       .responseLogo
+        max-width: 100%
+        object-fit: contain
         width: auto
         height: 100px
       .response
