--- a/client/src/components/OfferForm/OfferForm.module.sass
+++ b/client/src/components/OfferForm/OfferForm.module.sass
@@ -64,7 +64,7 @@
       .imgStyle
         display: block
         width: 120px
-        height: 120px
+        object-fit: contain
         align-self: center
       .uploadInputContainer
         display: flex
