--- a/client/src/components/Header/Header.module.sass
+++ b/client/src/components/Header/Header.module.sass
@@ -22,6 +22,8 @@
       margin: 5px
 
     .startContestBtn
+      display: flex
+      align-items: center
       text-align: center
       max-width: 340px
       padding: 10px 22px
@@ -30,7 +32,7 @@
       border-radius: 5px
       font-size: 14px
       font-weight: 400
-      margin-bottom: 10px
+      margin: 5px
       cursor: pointer
 
       &:hover
