--- a/client/src/components/HowItWorks/ContactUs/ContactUs.module.sass
+++ b/client/src/components/HowItWorks/ContactUs/ContactUs.module.sass
@@ -1,13 +1,60 @@
+$main-theme-color: #28d2d0
+$background-color: #455a89
+$main-font-color: #ffffff
+$links-color: #f18762
+
+    
 .contactUsContainer
     display: grid
-    grid-template-areas: 'icon text button'
-    background-color: #455a89
+    grid-template-rows: 1fr
+    grid-template-areas: 'icon text text button'
+    grid-column-gap: 20px
+    background-color: $background-color
+    font-family: 'Raleway'
+    color: $main-font-color
+    line-height: 1.2
+    padding: 30px
 
-    &> span
+    @media screen and ( max-width: 920px )
+        grid-template-rows: 1fr 1fr
+        grid-template-areas: 'icon text' 'button button'
+
+    @media screen and ( max-width: 775px )
+        grid-template-rows: 1fr
+        grid-row-gap: 20px
+
+    .icon
         grid-area: icon
+        color: $background-color
+        background-color: $main-font-color
+        width: 100px
+        height: 100px
+        font-size: 40px
+        border-radius: 50%
+
+        display: flex
+        justify-content: center
+        align-items: center
+        @media screen and ( max-width: 775px )
+            display: none
 
     .textContainer
         grid-area: text
 
+        .header
+            font-size: 25px
+            font-weight: bold
+            margin-bottom: 40px
+        .description
+            font-size: 20px
+            
+            &> a 
+                text-decoration: none
+                color: $links-color
+
     .buttonPosition
         grid-area: button
+        align-self: start
+        @media screen and ( max-width: 920px )
+            justify-self: center
+            align-self: center
