--- a/client/src/components/HowItWorks/ContactUs/ContactUs.module.sass
+++ b/client/src/components/HowItWorks/ContactUs/ContactUs.module.sass
@@ -6,8 +6,7 @@ $links-color: #f18762
     
 .contactUsContainer
     display: grid
-    grid-template-rows: 1fr
-    grid-template-areas: 'icon text text button'
+    grid-template-columns: 1fr 100px 850px 250px 1fr
     grid-column-gap: 20px
     background-color: $background-color
     font-family: 'Raleway'
@@ -15,16 +14,14 @@ $links-color: #f18762
     line-height: 1.2
     padding: 30px
 
-    @media screen and ( max-width: 920px )
-        grid-template-rows: 1fr 1fr
-        grid-template-areas: 'icon text' 'button button'
+    @media screen and ( max-width: 1000px )
+        grid-template: 1fr 80px / 100px 2fr 250px
 
-    @media screen and ( max-width: 775px )
-        grid-template-rows: 1fr
-        grid-row-gap: 20px
+    @media screen and ( max-width: 641px )
+        grid-template-columns: 1fr 250px 1fr
 
     .icon
-        grid-area: icon
+        grid-column: 2/3
         color: $background-color
         background-color: $main-font-color
         width: 100px
@@ -35,11 +32,20 @@ $links-color: #f18762
         display: flex
         justify-content: center
         align-items: center
-        @media screen and ( max-width: 775px )
+        @media screen and ( max-width: 1000px )
+            grid-column: 1/2
+
+        @media screen and ( max-width: 641px )
             display: none
 
     .textContainer
-        grid-area: text
+        grid-column: 3/4
+
+        @media screen and ( max-width: 1000px )
+            grid-column: 2/4
+
+        @media screen and ( max-width: 641px )
+            grid-column: 1/4
 
         .header
             font-size: 25px
@@ -53,8 +59,13 @@ $links-color: #f18762
                 color: $links-color
 
     .buttonPosition
-        grid-area: button
+        grid-column: 4/5
         align-self: start
-        @media screen and ( max-width: 920px )
-            justify-self: center
-            align-self: center
+
+        @media screen and ( max-width: 1000px )
+            align-self: end
+            grid-row: 2/3
+            grid-column: 3/4
+
+        @media screen and ( max-width: 641px )
+            grid-column: 2/3
