--- a/client/src/components/ButtonGroup/Button/Button.module.sass
+++ b/client/src/components/ButtonGroup/Button/Button.module.sass
@@ -22,7 +22,8 @@ $hover-shadow: 0px 0px 15px 0px rgba(0,0,0,0.07)
     
     padding: 20px
 
-    transition: 0.3s
+    transition: 0.15s
+    cursor: pointer
 
     &:hover
         border-color: $checked-border-color
