--- a/client/src/components/Events/Events.module.sass
+++ b/client/src/components/Events/Events.module.sass
@@ -1,13 +1,37 @@
+$main-font-color: #363636
+$hover-color: #007bff
+$light-color: #ffffff
+    
 .mainContainer
     display: grid
-    grid-template: 20px 1fr / 1fr 3fr 1fr 
+    grid-template: 36px 1fr / 1fr 3fr 1fr 
     grid-row-gap: 10px 
-    color: #363636
+    color: $main-font-color
 
     .addEventButton
         grid-column: 2 / 3
+        justify-self: start
+        align-self: center
         cursor: pointer
+        outline: none
+        background-color: $light-color
+        color: $main-font-color
+        border: none
+
+        transition: .3s
+
+        &:focus
+            color: inherit
+            background-color: inherit
+            border-color: inherit
+            box-shadow: none
+            
+        &:hover
+            color: $light-color
+            background-color: $hover-color
 
     .listPosition
         grid-column: 2 / 3
         grid-row: 2 / 3
+
+    
