Fix adaptive styles of events list, add styles to reminding block

--- a/client/src/components/Events/Events.module.sass
+++ b/client/src/components/Events/Events.module.sass
@@ -8,6 +8,9 @@ $light-color: #ffffff
     grid-row-gap: 10px 
     color: $main-font-color
 
+    @media screen and ( max-width: 1024px )
+        grid-template: 36px 1fr / 1fr 90% 1fr
+        
     .addEventButton
         grid-column: 2 / 3
         justify-self: start
