--- a/client/src/components/Events/EventsList/Event/Event.module.sass
+++ b/client/src/components/Events/EventsList/Event/Event.module.sass
@@ -1,10 +1,35 @@
 .eventContainer
     display: grid
+    grid-column-gap: 15px
+    position: relative
     grid-template-columns: 3fr 1fr
     padding: 15px 10px
     border-radius: 5px
+
+    @media screen and ( max-width: 768px )
+        grid-template: 1fr 25px /1fr
+        justify-items: center
+        text-align: center
 
     .timer
         justify-self: end
         color: #8a8a8a
         font-weight: 500
+
+        @media screen and ( max-width: 768px )
+            justify-self: center
+
+    .eventReminding
+        position: absolute
+        cursor: pointer
+        top: 4px
+        padding: 10px 20px
+        background-color: #f86b6b
+        border: 1px solid #aa3e3e
+        border-radius: 5px
+
+        .closeButton
+            position: absolute
+            top: 2px
+            right: 5px 
+            cursor: pointer
