--- a/client/src/components/Events/EventsList/EventsList.module.sass
+++ b/client/src/components/Events/EventsList/EventsList.module.sass
@@ -8,21 +8,38 @@
 
     .headerContainer
         display: grid
-        grid-template-columns: 3fr 1fr
+        grid-template-columns: 3fr 2fr
+        grid-column-gap: 15px
         align-items: center
         
         &> h2 
             font-size: 25px
             font-weight: 500
+            margin: 0
+
+            @media screen and ( max-width: 840px )
+                font-size: 20px
 
         .iconWrapper
             justify-self: end
             display: flex
             align-items: center
+            text-align: end
+            line-height: 1
+
+            @media screen and ( max-width: 668px )
+                flex-direction: column-reverse
+                line-height: 1.5
+
+            @media screen and ( max-width: 555px )
+                align-self: end
 
             &> span
                 margin-left: 10px
                 font-size: 30px
+
+                @media screen and ( max-width: 555px )
+                    display: none
         
     .listContainer
         display: grid
