--- a/client/src/components/Events/AddEventForm/AddEventForm.module.sass
+++ b/client/src/components/Events/AddEventForm/AddEventForm.module.sass
@@ -18,7 +18,8 @@ $warning-font-color: #ffffff
     background-color: $main-modal-window-color
     border-radius: 3px
     color: $warning-font-color
-    font-size: 15px
+    font-size: 13px
+    font-weight: 500
     padding: 5px
 
     &::before
@@ -31,3 +32,8 @@ $warning-font-color: #ffffff
         border-style: solid
         border-width: 0 4.5px 7px 4.5px
         border-color: transparent transparent $main-modal-window-color transparent
+
+.pickerTitle
+    text-align: center
+    line-height: 1
+    margin-top: 5px
