--- a/client/src/components/Events/AddEventForm/DatePickerField/DatePickerField.module.sass
+++ b/client/src/components/Events/AddEventForm/DatePickerField/DatePickerField.module.sass
@@ -1,15 +1,42 @@
+$main-modal-window-color: #007bff
+$warning-font-color: #ffffff
+$date-field-background: #d1e9cf
+$date-field-hover: #b2d6ae 
+
 .pickerButton
     outline: none
     border: none
-    background-color: #d1e9cf
+    background-color: $date-field-background
     border-radius: 5px
     width: 100%
     padding: 5px
-    margin: 5px 0
+    margin: 10px 0
     font-size: 18px
     font-weight: 500
 
     transition: 0.3s
     
     &:hover
-        background-color: #b2d6ae 
+        background-color: $date-field-hover 
+
+.validationWarning
+    position: absolute
+    top: 54px
+    left: 0
+    
+    background-color: $main-modal-window-color
+    border-radius: 3px
+    color: $warning-font-color
+    font-size: 13px
+    padding: 5px 10px
+
+    &::before
+        position: absolute
+        top: -7px
+        left: 10px
+        content: ''
+        width: 0
+        height: 0
+        border-style: solid
+        border-width: 0 4.5px 7px 4.5px
+        border-color: transparent transparent $main-modal-window-color transparent
