Add base structure of restore password page

--- a/client/src/components/LoginForm/LoginForm.module.sass
+++ b/client/src/components/LoginForm/LoginForm.module.sass
@@ -16,11 +16,10 @@
     align-items: center
     background-color: #28d2d0
     height: 64px
-    margin-left: 20px
     padding: 0
     border: 0
     width: stretch
-    margin-right: 20px
+    margin: 10px 20px 0 20px
     @media(max-width: 850px)
       align-self: auto
 
@@ -93,3 +92,8 @@
   .errorPosition
     position: absolute
     top: -35px
+
+.forgotPassword
+  text-decoration: none
+  color: #ffffff
+  margin-left: 20px
