--- a/client/src/pages/RestorePassword/RestorePassword.module.sass
+++ b/client/src/pages/RestorePassword/RestorePassword.module.sass
@@ -1,13 +1,19 @@
 .mainContainer
     background-color: #3ea9f5
-    height: 100vh
-    padding-top: 66px
+    min-height: 100vh
 
     .headerContainer
         display: flex
         justify-content: space-around
         align-items: center
-
+        padding-top: 66px
+        @media screen and ( max-width: 500px )
+            flex-direction: column
+            align-items: flex-start
+            padding-top: 20px
+            padding-left: 15px
+            gap: 10px
+            
         .buttonsContainer
             display: grid
             grid-template-columns: 1fr 1fr
@@ -28,3 +34,19 @@
                 font-weight: bold
                 text-decoration: none
                 color: #ffffff
+
+    .formContainer
+        display: flex
+        flex-direction: column
+        margin: 80px auto 0
+        max-width: 560px
+        padding-bottom: 20px
+
+        h2
+            text-align: center
+            font-size: 34px
+            letter-spacing: 0.6px
+            color: white
+            margin-top: 20px
+            margin-bottom: 28px
+
