Add render error and data for restore password

--- a/client/src/pages/RestorePassword/RestorePassword.module.sass
+++ b/client/src/pages/RestorePassword/RestorePassword.module.sass
@@ -2,6 +2,13 @@
     background-color: #3ea9f5
     min-height: 100vh
 
+    .error
+        position: absolute
+        left: 50%
+        transform: translate(-50%)
+        top: 150px
+        max-width: 560px
+
     .headerContainer
         display: flex
         justify-content: space-around
