--- a/client/src/components/ModeratorDashboard/ModeratorOfferBox/ModeratorOfferBox.module.sass
+++ b/client/src/components/ModeratorDashboard/ModeratorOfferBox/ModeratorOfferBox.module.sass
@@ -14,6 +14,7 @@ $decline-button-hover: #da8484
     grid-column-gap: 15px
     justify-items: center
     align-items: center
+    position: relative
 
     padding: 15px 30px
     background-color: $background-color
@@ -21,6 +22,20 @@ $decline-button-hover: #da8484
 
     @media screen and ( max-width: 600px )
         grid-template-columns: 1fr
+
+    .status
+        position: absolute
+        left: calc(100% - 35px)
+        top: -10px
+        border-radius: 50%
+        background-color: #ffffff
+        font-size: 54px
+    
+    .approve
+        color: #008000
+        
+    .decline
+        color: #ff0000
 
     .contestInfo
         font-weight: 500
