--- a/client/src/components/ModeratorDashboard/ModeratorOfferBox/ModeratorOfferBox.module.sass
+++ b/client/src/components/ModeratorDashboard/ModeratorOfferBox/ModeratorOfferBox.module.sass
@@ -76,6 +76,13 @@ $decline-button-hover: #da8484
             grid-column: 1 / 3
             justify-self: center
 
+        .logo
+            max-width: 100%
+            object-fit: contain
+            width: auto
+            height: 100px
+            cursor: pointer
+
     .approveButton
         grid-column: 1 / 2
 
