Add render moderation status at creator dashboard

--- a/client/src/components/OfferBox/OfferBox.module.sass
+++ b/client/src/components/OfferBox/OfferBox.module.sass
@@ -99,6 +99,13 @@
         color: #556da5
         margin-bottom: 10px
         font-size: 18px
+
+    .moderationStatus
+      color: #556da5
+      font-size: 13px
+      position: absolute
+      right: -20px
+      bottom: 0
     .creativeRating
       display: flex
       margin-top: 5px
