Add render error and loader

--- a/client/src/components/ModeratorDashboard/ModeratorDashboard.module.sass
+++ b/client/src/components/ModeratorDashboard/ModeratorDashboard.module.sass
@@ -1,9 +1,9 @@
 .mainContainer 
     display: grid
-    grid-template-columns: 1fr 80% 1fr
     justify-items: center
     color: #46568a
     position: relative
+    margin: 25px
 
     .offersList
         display: flex
@@ -12,16 +12,7 @@
         max-width: 1000px
         width: 100%
         padding: 40px 15px 15px
-        margin: 50px 0
+        margin: 25px 0
         box-shadow: 0px 7px 25px 0px rgba(0,0,0,0.16)
-
-        grid-column: 2/3
-
-    .loader
-        grid-column: 2/3 
-        font-size: 25px
-        font-weight: 500
-        position: absolute
-        top: 12px
         
 
