--- a/client/src/components/Events/Events.module.sass
+++ b/client/src/components/Events/Events.module.sass
@@ -7,6 +7,7 @@ $light-color: #ffffff
     grid-template: 36px 1fr / 1fr 3fr 1fr 
     grid-row-gap: 10px 
     color: $main-font-color
+    position: relative
 
     @media screen and ( max-width: 1024px )
         grid-template: 36px 1fr / 1fr 90% 1fr
